// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebpackAstParser > cache parsing > definitions > from wreq(number) > finds the module for a simple wreq call 1`] = `
[
  {
    "filePath": "__test__/.modules/555555.js",
    "locationType": "file_path",
    "range": [
      {
        "character": 0,
        "line": 0,
      },
      {
        "character": 0,
        "line": 0,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > from wreq(number) > finds the module for a wreq call not in imports 1`] = `
[
  {
    "filePath": "__test__/.modules/333333.js",
    "locationType": "file_path",
    "range": [
      {
        "character": 0,
        "line": 0,
      },
      {
        "character": 0,
        "line": 0,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > from wreq(number) > finds the module for a wreq call that has an export 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 13,
        "line": 12,
      },
      {
        "character": 15,
        "line": 12,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 1 > finds the member def when used normally 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 24,
        "line": 24,
      },
      {
        "character": 30,
        "line": 24,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 1 > finds the object def from obj use 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 23,
      },
      {
        "character": 18,
        "line": 23,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 1 > finds the object def when used in a computed access 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 23,
      },
      {
        "character": 18,
        "line": 23,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 2 > finds the member def when used normally 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 19,
        "line": 30,
      },
      {
        "character": 20,
        "line": 30,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 2 > finds the object def from obj use 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 28,
      },
      {
        "character": 18,
        "line": 28,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 2 > finds the object def when used in a computed access 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 28,
      },
      {
        "character": 18,
        "line": 28,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > finds the use of a simple import 1`] = `
[
  {
    "content": "// Webpack Module 222222 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        H: () => _h,
        J: () => _j,
        G: () => _g
    });
    const r = n(555001)
      , _3 = n(333333);
    function _h(p1, p2=4) {
        return p1 + p2
    }
    function _j(p1, p2) {
        return p1 - p2
    }
    function _g() {
        // computed enum access
        let c = _()
          , c2 = _();
        console.log(_3.E[c], _3.F[c2]);
        return (0,
        r.jsx)(_3.U, {
            children: (0,
            r.jsxs)("div", {
                children: ["Hello World", (0,
                r.jsx)(_3.I, {
                    children: "goodbye"
                })]
            })
        })
    }
}
",
    "locationType": "inline",
    "range": [
      {
        "character": 13,
        "line": 17,
      },
      {
        "character": 15,
        "line": 17,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > finds the use of a simple import 2 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 13,
        "line": 12,
      },
      {
        "character": 15,
        "line": 12,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > hover text cross-module > finds the hover text for a store from another module 1`] = `
[
  [
    {
      "character": 11,
      "line": 38,
    },
    {
      "character": 13,
      "line": 38,
    },
  ],
  "MyTestingStore",
]
`;

exports[`WebpackAstParser > cache parsing > hover text cross-module > finds the hover text for a store from another module 2`] = `
[
  [
    {
      "character": 23,
      "line": 15,
    },
    {
      "character": 25,
      "line": 15,
    },
  ],
  "MyTestingStore",
]
`;

exports[`WebpackAstParser > cache parsing > hover text cross-module > finds the hover text for a store from another module 3`] = `
[
  [
    {
      "character": 23,
      "line": 31,
    },
    {
      "character": 25,
      "line": 31,
    },
  ],
  "MyTestingStore",
]
`;

exports[`WebpackAstParser > export parsing > e.exports > parses a module with an object literal export (class names) 1`] = `
{
  "addButton": {
    Symbol(WebpackAstParser.Hover): ""addButton_f5cb44"",
    Symbol(CommonJS Default Export): [
      [
        {
          "character": 8,
          "line": 7,
        },
        {
          "character": 17,
          "line": 7,
        },
      ],
      [
        {
          "character": 19,
          "line": 7,
        },
        {
          "character": 37,
          "line": 7,
        },
      ],
    ],
  },
  "addButtonInner": {
    Symbol(WebpackAstParser.Hover): ""addButtonInner_f5cb44"",
    Symbol(CommonJS Default Export): [
      [
        {
          "character": 8,
          "line": 8,
        },
        {
          "character": 22,
          "line": 8,
        },
      ],
      [
        {
          "character": 24,
          "line": 8,
        },
        {
          "character": 47,
          "line": 8,
        },
      ],
    ],
  },
  "productListings": {
    Symbol(WebpackAstParser.Hover): ""productListings_f5cb44"",
    Symbol(CommonJS Default Export): [
      [
        {
          "character": 8,
          "line": 6,
        },
        {
          "character": 23,
          "line": 6,
        },
      ],
      [
        {
          "character": 25,
          "line": 6,
        },
        {
          "character": 49,
          "line": 6,
        },
      ],
    ],
  },
  "productListingsHeader": {
    Symbol(WebpackAstParser.Hover): ""productListingsHeader_f5cb44"",
    Symbol(CommonJS Default Export): [
      [
        {
          "character": 8,
          "line": 5,
        },
        {
          "character": 29,
          "line": 5,
        },
      ],
      [
        {
          "character": 31,
          "line": 5,
        },
        {
          "character": 61,
          "line": 5,
        },
      ],
    ],
  },
  Symbol(CommonJS Default Export): [
    [
      {
        "character": 16,
        "line": 4,
      },
      {
        "character": 17,
        "line": 4,
      },
    ],
  ],
}
`;

exports[`WebpackAstParser > export parsing > stores > store using libdiscore 1`] = `
{
  "A": {
    "getGuildCount": [
      [
        {
          "character": 8,
          "line": 71,
        },
        {
          "character": 21,
          "line": 71,
        },
      ],
    ],
    "stateWrapper": [
      [
        {
          "character": 8,
          "line": 68,
        },
        {
          "character": 20,
          "line": 68,
        },
      ],
    ],
    Symbol(CommonJS Default Export): [
      [
        {
          "character": 8,
          "line": 4,
        },
        {
          "character": 9,
          "line": 4,
        },
      ],
      [
        {
          "character": 16,
          "line": 88,
        },
        {
          "character": 17,
          "line": 88,
        },
      ],
      [
        {
          "character": 10,
          "line": 67,
        },
        {
          "character": 11,
          "line": 67,
        },
      ],
      [
        {
          "character": 8,
          "line": 74,
        },
        {
          "character": 9,
          "line": 85,
        },
      ],
    ],
    Symbol(WebpackAstParser.Hover): "GuildStore",
  },
}
`;

exports[`WebpackAstParser > export parsing > stores > store with static properties 1`] = `
{
  "ASSISTANT_WUMPUS_VOICE_USER": {
    Symbol(WebpackAstParser.Hover): ""47835198259242069"",
    Symbol(CommonJS Default Export): [
      [
        {
          "character": 8,
          "line": 6,
        },
        {
          "character": 35,
          "line": 6,
        },
      ],
      [
        {
          "character": 12,
          "line": 35,
        },
        {
          "character": 31,
          "line": 35,
        },
      ],
    ],
  },
  "default": {
    "LATEST_SNAPSHOT_VERSION": {
      Symbol(WebpackAstParser.Hover): "1",
      Symbol(CommonJS Default Export): [
        [
          {
            "character": 41,
            "line": 594,
          },
          {
            "character": 42,
            "line": 594,
          },
        ],
      ],
    },
    "filter": [
      [
        {
          "character": 8,
          "line": 710,
        },
        {
          "character": 14,
          "line": 710,
        },
      ],
    ],
    "findByTag": [
      [
        {
          "character": 8,
          "line": 703,
        },
        {
          "character": 17,
          "line": 703,
        },
      ],
    ],
    "forEach": [
      [
        {
          "character": 8,
          "line": 698,
        },
        {
          "character": 15,
          "line": 698,
        },
      ],
    ],
    "getCurrentUser": [
      [
        {
          "character": 8,
          "line": 720,
        },
        {
          "character": 22,
          "line": 720,
        },
      ],
    ],
    "getUser": [
      [
        {
          "character": 8,
          "line": 691,
        },
        {
          "character": 15,
          "line": 691,
        },
      ],
    ],
    "getUserStoreVersion": {
      Symbol(WebpackAstParser.Hover): "0",
      Symbol(CommonJS Default Export): [
        [
          {
            "character": 12,
            "line": 34,
          },
          {
            "character": 13,
            "line": 34,
          },
        ],
      ],
    },
    "getUsers": [
      [
        {
          "character": 8,
          "line": 695,
        },
        {
          "character": 16,
          "line": 695,
        },
      ],
    ],
    "handleLoadCache": [
      [
        {
          "character": 8,
          "line": 676,
        },
        {
          "character": 23,
          "line": 676,
        },
      ],
    ],
    "initialize": [
      [
        {
          "character": 8,
          "line": 664,
        },
        {
          "character": 18,
          "line": 664,
        },
      ],
    ],
    "takeSnapshot": [
      [
        {
          "character": 8,
          "line": 667,
        },
        {
          "character": 20,
          "line": 667,
        },
      ],
    ],
    Symbol(CommonJS Default Export): [
      [
        {
          "character": 8,
          "line": 7,
        },
        {
          "character": 15,
          "line": 7,
        },
      ],
      [
        {
          "character": 17,
          "line": 724,
        },
        {
          "character": 19,
          "line": 724,
        },
      ],
      [
        {
          "character": 10,
          "line": 592,
        },
        {
          "character": 12,
          "line": 592,
        },
      ],
      [
        {
          "character": 8,
          "line": 595,
        },
        {
          "character": 9,
          "line": 663,
        },
      ],
    ],
    Symbol(WebpackAstParser.Hover): "UserStore",
  },
  "mergeUser": [
    [
      {
        "character": 8,
        "line": 8,
      },
      {
        "character": 17,
        "line": 8,
      },
    ],
    [
      {
        "character": 13,
        "line": 128,
      },
      {
        "character": 14,
        "line": 128,
      },
    ],
  ],
  "transformUser": [
    [
      {
        "character": 8,
        "line": 9,
      },
      {
        "character": 21,
        "line": 9,
      },
    ],
    [
      {
        "character": 13,
        "line": 71,
      },
      {
        "character": 14,
        "line": 71,
      },
    ],
  ],
  "users": [
    [
      {
        "character": 8,
        "line": 10,
      },
      {
        "character": 13,
        "line": 10,
      },
    ],
    [
      {
        "character": 15,
        "line": 10,
      },
      {
        "character": 20,
        "line": 10,
      },
    ],
  ],
}
`;
